Improve recipe view CSS, fix whitespace issue.

--- a/cookbook/static/recipe-view.css
+++ b/cookbook/static/recipe-view.css
@@ -1,41 +1,54 @@
-#view-recipe-header {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 16rem;
-    margin: 0;
-}
-
 #view-recipe-image {
     flex: 1 1 420rem;
     max-height: 400rem;
     margin: 0;
 }
 
-#view-recipe-info {
-    flex: 1 1 420rem;
-    margin: 0;
+#view-recipe-attributes {
+    display: inline-flex;
+    gap: 8rem;
+    margin-bottom: 8rem;
 }
 
 #view-recipe-attr {
-    display: inline-flex;
-    padding-bottom: 8rem;
+    display: flex;
+    gap: 8rem;
 }
 
-#view-recipe-attr-icon {
-    margin-right: 8rem;
+#view-recipe-header {
+    width: fit-content;
+    margin: auto;
+    text-align: center;
+}
+
+#view-recipe-header h4 {
+    display: block;
 }
 
 #view-recipe-content {
     display: flex;
     flex-wrap: wrap;
-    margin-top: 16rem;
+    justify-content: center;
+    gap: 16rem;
+    width: fit-content;
+    margin: 24rem auto;
 }
 
-#view-recipe-ingredients {
-    margin-right: 16rem;
+#view-recipe-nutrition table {
+    table-layout: fixed;
 }
 
-#view-recipe-instructions {
+#view-recipe-servings {
+    margin: 16rem 0;
+    max-widtH: 120rem;
+}
+
+#view-recipe-servings-tooltip {
+    right: -8rem;
+}
+
+#view-recipe-instructions p {
+    white-space: pre-wrap;
 }
 
 #modal-image-zoom-close-button {
@@ -54,5 +67,9 @@
     max-width: 100%;
     max-height: calc(100vh - 102rem);
     margin: auto;
+}
+
+section {
+    width: 360rem;
 }
 
